--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-    "name": "pettouch",
-    "version": "1.0.0",
-    "description": "PetTouch NFC pet management system",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "@supabase/supabase-js": "^2.45.4"
-    }
+  "name": "pettouch",
+  "version": "1.0.0",
+  "description": "PetTouch NFC pet management system",
+  "main": "index.js",
+  "scripts": {
+    "build": "tailwindcss build css/style.css -o public/css/style.css",
+    "dev": "live-server public"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
+    "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "live-server": "^1.2.2"
   }
+}
