--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "i18n:extract": "node scripts/extract-translations.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -63,6 +65,7 @@
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.5.1",
     "react-leaflet": "^4.2.1",
+    "react-player": "^2.16.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
@@ -70,6 +73,7 @@
     "supabase": "^2.22.12",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "vaul": "^0.9.3",
     "zod": "^3.24.4"
   },
